--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -12,14 +12,15 @@
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
 
 </head>
-
-    <body>
-    <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
-    <!--Add a nav bar here -->
-
-    <!--Add a dealer table here -->
-
-    </body>
-
+<body>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/djangoapp/about/">About Us</a></li>
+            <li><a href="/djangoapp/contact/">Contact Us</a></li>
+        </ul>
+    </nav>
+    <h1>Welcome to my Django App!</h1>
+    <p>This is the home page.</p>
+</body>
 </html>
