--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -15,12 +15,25 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/djangoapp/about/">About Us</a></li>
-            <li><a href="/djangoapp/contact/">Contact Us</a></li>
+          <li>
+            <form action="login" method="post">
+              {% csrf_token %}
+              <input type="text" name="username" placeholder="Username">
+              <input type="password" name="password" placeholder="Password">
+              <button type="submit">Login</button>
+            </form>
+          </li>
+          <li><a href="signup">Signup</a></li>
         </ul>
-    </nav>
-    <h1>Welcome to my Django App!</h1>
-    <p>This is the home page.</p>
+        <ul>
+          <li><span>Welcome, {{ user.first_name|default:user.username }}</span></li>
+          <li>
+            <form action="signout" method="post">
+              {% csrf_token %}
+              <button type="submit">Signout</button>
+            </form>
+          </li>
+        </ul>
+      </nav>                  
 </body>
 </html>
